--- a/index.html
+++ b/index.html
@@ -3,12 +3,79 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Porfolio</title>
+    <title>Portfolio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="index.css">
 </head>
+
 <body>
-    <h1></h1>
-    <p> Hola, Me llamo Bianca</p>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    
+    <header class="header">
+            <div class="menu container">
+                <div class="container">
+                    <a href="#" class="marca">
+                    <img src="/Images/ocsi.png" alt="Logo" width="60" height="60">
+                    </a>
+                </div>
+                <input type="checkbox" id="menu">
+                <label for="menu">
+                    <img src="" class="menu-icono" alt="">
+                </label>
+                <nav class="navbar">
+                    <ul>
+                        <li><a href="#">Inicio</a></li>
+                        <li><a href="#">Intereses</a></li>
+                        <li><a href="#">Trabajos</a></li>
+                        <li><a href="#">Habilidades</a></li>
+                        <li><a href="#">Contacto</a></li>
+                    </ul>
+                </nav>
+            </div>
+            
+            <div class="header-content container">
+                <h1>Bianca Cornaglia</h1>
+                <p>Hola, soy una artista digital con muchas ganas de seguir aprendiendo y 
+                puliendo mis habilidades para llevar a cabo cada vez mejores proyectos.
+                Tengo 19 años y estudio Desarrollo de Videojuegos y Entretenimiento Digital
+                en la Universidad Nacional de Rafaela</p>
+                <a href="#" class="btn-1">Intereses</a>
+            </div>
+    </header>
+    <section> <div class="intereses"></div>
+        <div class="intereses-content">
+            <h2>Intereses</h2>
+            <p><div class="txt-p">
+                Algunas cositas que me gustan:
+            </div>
+            </p>
+                <div class="interes_01">
+                    <img src="" alt="Dibujar">
+                    <h3>Dibujar</h3>
+                </div>
+                <div class="interes_01">
+                    <img src="" alt="Cafe">
+                    <h3>Tomar Cafe</h3>
+                </div>
+                <div class="interes_01">
+                    <img src="" alt="Fotos">
+                    <h3>Sacar Fotos</h3>
+                </div>
+                <div class="interes_01">
+                    <img src="" alt="rompecabezas">
+                    <h3>Armar rompecabezas</h3>
+                </div>
+                <div class="interes_01">
+                    <img src="" alt="Heartstopper">
+                    <h3>Mirar Heartstopper</h3>
+                </div>
+                <div class="interes_01">
+                    <img src="" alt="Miranda">
+                    <h3>Escuchar Miranda!</h3>
+                </div>
+                <a href="#" class="btn-1">Trabajos</a>
+        </div>
+   </section>
+ 
+
 </body>
 </html>
