--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -10,114 +10,119 @@
 </head>
 
 <body>
-    
-    <header
+    <header>
+        <h1>Portfolio</h1>
         <nav>
-        <a href="#" class="Logo">
-            <img src="/Proyecto/Images/Logob3ly_01.jpg" alt="Logo" width="60" height="60">
-        </a>
-        </div>
             <ul>
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">Intereses</a></li>
-                <li><a href="#">Trabajos</a></li>
-                <li><a href="#">Habilidades</a></li>
-                <li><a href="#">Contacto</a></li>
+                <li><a href="#in">Inicio</a></li>
+                <li><a href="#int">Intereses</a></li>
+                <li><a href="#trab">Trabajos</a></li>
+                <li><a href="#hab">Habilidades</a></li>
+                <li><a href="#cont">Contacto</a></li>
             </ul>
         </nav>
-        <section class="textos-header">
+    </header>
+
+    <main>
+        <section class="descripcion">
             <h1>Bianca Cornaglia</h1>
             <p>Hola, soy una artista digital con muchas ganas de seguir aprendiendo y 
             puliendo mis habilidades para llevar a cabo cada vez mejores proyectos.
-            Tengo 19 años y estudio Desarrollo de Videojuegos y Entretenimiento Digital
+            <br>Soy de Santa fe, tengo 19 años y actualmente estudio Desarrollo de Videojuegos y Entretenimiento Digital
             en la Universidad Nacional de Rafaela</p>
         </section>
-            <a href="#" class="btn-1">Intereses</a>
-    </header>
-    <main>
-        <section class="intereses">
-            <h2 class="titulo">Intereses</h2>
-            <p>Algunas cositas que me gustan</p>
-                <div class="interes_01">
-                    <img src="/Proyecto/Images/Dibujar_01.jpg" alt="Dibujar">
-                    <h3>Dibujar</h3>
-                </div>
-                <div class="interes_01">
-                    <img src="/Proyecto/Images/cafe_01.jpg" alt="Cafe">
-                    <h3>Tomar Cafe</h3>
-                </div>
-                <div class="interes_01">
-                    <img src="/Proyecto/Images/cocinar_01.jpg" alt="Cocina">
-                    <h3>Cocinar</h3>
-                </div>
-                <div class="interes_01">
-                    <img src="/Proyecto/Images/rompecabezas_01.jpg" alt="rompecabezas">
-                    <h3>Armar rompecabezas</h3>
-                </div>
-                <div class="interes_01">
-                    <img src="/Proyecto/Images/heartstopper_01.jpg" alt="Heartstopper">
-                    <h3>Mirar Heartstopper</h3>
-                </div>
-                <div class="interes_01">
-                    <img src="/Proyecto/Images/Miranda!.jpg" alt="Miranda">
-                    <h3>Escuchar Miranda!</h3>
-        </section>
-        <section class="trabajos">
-            <div class="contenedor">
-                <h2 class="titulo">Trabajos</h2>
-                <p>Algunas cositas que realicé</p>
-                <div class="galeria-trabajos">
+    </main>
+
+    <section class="intereses">
+        <h2 class="titulo" id="int">Intereses</h2>
+        <p>Algunas cosas que me gustan</p>
+            <div class="intereses-contenedor">
+                <ul>
+                    <li><figure><img src="/Proyecto/Images/Dibujar_01.jpg" alt="Dibujar" width="200"></figure>
+                        <h3>Dibujar</h3></li>
+                    <li><figure><img src="/Proyecto/Images/cafe_01.jpg" alt="Cafe" width="200"></figure>
+                        <h3>Cafe</h3></li>   
+                    <li><figure><img src="/Proyecto/Images/cocinar_01.jpg" alt="Cocina" width="200"></figure>
+                        <h3>Cocinar</h3></li>    
+                    <li><figure><img src="/Proyecto/Images/rompecabezas_01.jpg" alt="rompecabezas" width="200"></figure>
+                        <h3>Rompecabezas</h3></li>    
+                    <li><figure><img src="/Proyecto/Images/heartstopper_01.jpg" alt="Heartstopper" width="200"></figure>
+                        <h3>Heartstopper</h3></li>    
+                    <li><figure><img src="/Proyecto/Images/Miranda!.jpg" alt="Miranda" width="200"></figure>
+                        <h3>Miranda!</h3></li>    
+                </ul>
+            </div> 
+    </section>
+
+    <section class="trabajos">
+        <div class="contenedor">
+            <h2 class="titulo" id="trab">Trabajos</h2>
+            <p>Algunas cositas que realicé</p>
+            <div class="galeria-trabajos">
                     <div class="imagen-trabajos">
-                        <img src="/Proyecto/Images/cono hombre.jpeg" alt="ilustracion">
+                        <img src="/Proyecto/Images/cono hombre.jpeg" alt="ilustracion" width="250" height="250">
                         <div class="hover-galeria">
-                            <img src="/Proyecto/Images/Logob3ly_02.png" alt="logo">
+                            <img src="/Proyecto/Images/Logob3ly_02.png" alt="logo" width="70">
                             <p>Ilustración en Aseprite</p>
                         </div>
                     </div>
                     <div class="imagen-trabajos">
-                        <img src="/Proyecto/Images/EmanaTober 4.jpg" alt="ilustracion">
+                        <img src="/Proyecto/Images/EmanaTober 4.jpg" alt="ilustracion" width="250">
                         <div class="hover-galeria">
-                            <img src="/Proyecto/Images/Logob3ly_02.png" alt="logo">
+                            <img src="/Proyecto/Images/Logob3ly_02.png" alt="logo" width="70">
                             <p>Ilustración en Clip Studio Paint</p>
                         </div>
                     </div>
                     <div class="imagen-trabajos">
-                        <img src="/Proyecto/Images/Maquina expendedora.jpg" alt="ilustracion">
+                        <img src="/Proyecto/Images/Maquina expendedora.jpg" alt="ilustracion" width="250">
                         <div class="hover-galeria">
-                            <img src="/Proyecto/Images/Logob3ly_02.png" alt="logo">
+                            <img src="/Proyecto/Images/Logob3ly_02.png" alt="logo" width="70">
                             <p>Ilustración en Clip Studio Paint</p>
                         </div>
                     </div>
                 </div>
-            </div>
-        </section>
+        </div>
+    </section>
+
+    <section>
         <div class="habilidades contenedor">
-            <h2 class="titulo">Habilidades</h2>
-            <div class="card">
-                <img src="/Proyecto/Images/logo_aseprite.png" alt="Aseprite">
-                <div class="contenido-texto-card">
-                    <h4>Aseprite</h4>
+            <h2 class="titulo" id="hab">Habilidades</h2>
+            <div class="targetas">
+                <div class="targeta">
+                    <img src="/Proyecto/Images/logo_aseprite.png" alt="Aseprite" width="50">
+                    <div class="contenido-texto-targeta">
+                        <h4>Aseprite</h4>
+                    </div>
                 </div>
-            </div>
-            <div class="card">
-                <img src="/Proyecto/Images/logo_clip.png" alt="Clip">
-                <div class="contenido-texto-card">
-                    <h4>Clip Studio Paint</h4>
+                <div class="targeta">
+                    <img src="/Proyecto/Images/logo_clip.png" alt="Clip" width="52">
+                    <div class="contenido-texto-targeta">
+                        <h4>Clip Studio Paint</h4>
+                    </div>
                 </div>
-            </div>
-            <div class="card">
-                <img src="/Proyecto/Images/logo_paint.png" alt="Paint">
-                <div class="contenido-texto-card">
-                    <h4>Paint Tool Sai</h4>
+                <div class="targeta">
+                    <img src="/Proyecto/Images/logo_paint.png" alt="Paint" width="55">
+                    <div class="contenido-texto-targeta">
+                        <h4>Paint Tool Sai</h4>
+                    </div>
                 </div>
             </div>
         </div>
-    </main>
+    </section>
+
+    <div id="boton">
+        <a href="#"><img src="/Proyecto/Images/logo_01.png" alt="subir"></a>
+    </div>
+    
     <footer>
         <div class="contenedor-footer">
             <div class="content-foo">
                 <h4>Gmail</h4>
-                <p>bian.cornaglia11@gmail.com</p>
+                <a href="mailto:bian.cornaglia11@gmail.com">bian.cornaglia11@gmail.com</a>
+            </div>
+            <div class="content-foo">
+                <h4>Celular</h4>
+                <a href="https://wa.me/3424279277" target="_blank">Whastapp</a>
             </div>
             <div class="content-foo">
                 <h4>Github</h4>
@@ -125,11 +130,11 @@
             </div>
             <div class="content-foo">
                 <h4>Instagram</h4>
-                <p>@b3ly_</p>
+                <a href="https://www.instagram.com/b3ly_/?next=%2Fbian_cornaglia%2F" target="_blank">@b3ly_</a>
             </div>
             <div class="content-foo">
                 <h4>Youtube</h4>
-                <p>B3LY_</p>
+                <a href="https://www.youtube.com/@B3ly_" target="_blank">B3LY_</a>
             </div>
         </div>
         <h2 class="titulo-final">&copy; B3LY_ | Bianca Cornaglia</h2>
