--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="shortcut icon" href="./Images/Logob3ly_cuadrado_01.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="Images/Logob3ly_cuadrado_01.jpg" type="image/x-icon">
     <link rel="stylesheet" href="assets/index.css">
-    <link rel="stylesheet" href="/Images/">
 
 </head>
 
@@ -28,7 +27,7 @@
     <main>
         <section class="descripcion">
             
-            <img class="mifoto" src="../Images/Fotomia_01.jpg" alt="Fotomia">
+            <img class="mifoto" src="Images/Fotomia_01.jpg" alt="Fotomia">
             
             <div>
                 <h1>Bianca Cornaglia</h1>
@@ -55,15 +54,15 @@
             <ul>
                     <li><img src="Images/Dibujar_01.jpg" alt="Dibujar" width="200">
                         <h3>Dibujar</h3></li>
-                    <li><img src="/Images/cafe_01.jpg" alt="Cafe" width="200">
+                    <li><img src="Images/cafe_01.jpg" alt="Cafe" width="200">
                         <h3>Cafe</h3></li>   
-                    <li><img src="/Images/cocinar_01.jpg" alt="Cocina" width="200">
+                    <li><img src="Images/cocinar_01.jpg" alt="Cocina" width="200">
                         <h3>Cocinar</h3></li>    
-                    <li><img src="/Images/rompecabezas_01.jpg" alt="rompecabezas" width="200">
+                    <li><img src="Images/rompecabezas_01.jpg" alt="rompecabezas" width="200">
                         <h3>Rompecabezas</h3></li>    
-                    <li><img src="/Images/heartstopper.jpg" alt="Heartstopper" width="200">
+                    <li><img src="Images/heartstopper.jpg" alt="Heartstopper" width="200">
                         <h3>Heartstopper</h3></li>    
-                    <li><img src="/Images/Miranda.jpg" alt="Miranda" width="200">
+                    <li><img src="Images/Miranda.jpg" alt="Miranda" width="200">
                         <h3>Miranda!</h3></li>    
             </ul>
 
@@ -82,25 +81,25 @@
             <div class="galeria-trabajos">
 
                 <div class="imagen-trabajos">
-                    <img src="/Images/DibujoCono.jpeg" alt="ilustracion">
+                    <img src="Images/DibujoCono.jpeg" alt="ilustracion">
                     <div class="hover-galeria">
-                        <img src="/Images/Logob3ly_png_03.png" alt="logo">
+                        <img src="Images/Logob3ly_png_03.png" alt="logo">
                         <p>Ilustración en Aseprite</p>
                     </div>
                 </div>
 
                 <div class="imagen-trabajos">
-                    <img src="/Images/DibujoLata.jpg" alt="ilustracion">
+                    <img src="Images/DibujoLata.jpg" alt="ilustracion">
                     <div class="hover-galeria">
-                        <img src="/Images/Logob3ly_png_03.png" alt="logo">
+                        <img src="Images/Logob3ly_png_03.png" alt="logo">
                         <p>Ilustración en Clip Studio Paint</p>
                     </div>
                 </div>
 
                 <div class="imagen-trabajos">
-                    <img src="/Images/DibujoMaquina.jpg" alt="ilustracion">
+                    <img src="Images/DibujoMaquina.jpg" alt="ilustracion">
                     <div class="hover-galeria">
-                        <img src="/Images/Logob3ly_png_03.png" alt="logo">
+                        <img src="Images/Logob3ly_png_03.png" alt="logo">
                         <p>Ilustración en Clip Studio Paint</p>
                     </div>
                 </div>
@@ -120,21 +119,21 @@
             <div class="targetas">
 
                 <div class="targeta">
-                    <img src="/Images/logo_aseprite.png" alt="Aseprite">
+                    <img src="Images/logo_aseprite.png" alt="Aseprite">
                     <div class="texto-targeta">
                         <h4>Aseprite</h4>
                     </div>
                 </div>
 
                 <div class="targeta">
-                    <img src="/Images/logo_clip.png" alt="Clip">
+                    <img src="Images/logo_clip.png" alt="Clip">
                     <div class="texto-targeta">
                         <h4>Clip Studio Paint</h4>
                     </div>
                 </div>
 
                 <div class="targeta">
-                    <img src="/Images/logo_paint.png" alt="Paint">
+                    <img src="Images/logo_paint.png" alt="Paint">
                     <div class="texto-targeta">
                         <h4>Paint Tool Sai</h4>
                     </div>
@@ -148,7 +147,7 @@
 
 <!--Boton para subir al inicio desde abajo de todo-->
     <div id="boton">
-        <a href="#"><img src="/Images/flecha arriba.png" alt="subir"></a>
+        <a href="#"><img src="Images/flecha arriba.png" alt="subir"></a>
     </div>
 
 <!--Seccion de Contacto-->
