cambio colores de letras

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                 puliendo mis habilidades para llevar a cabo cada vez mejores proyectos.</p>
                 <h2>Un poco sobre mi</h2>
                 <p>Tengo 19 años, soy de Santo Tome, una pequeña ciudad de Santa fe, pero 
-                actualmente vivo en Rafaela debido a que estudio Desarrollo de Videojuegos y 
-                Entretenimiento Digital en la <b> Universidad Nacional de Rafaela</b>.</p>
+                actualmente vivo en Rafaela debido a que estudio la Licenciatura en 
+                Desarrollo de Videojuegos y Entretenimiento Digital en la <b> Universidad Nacional de Rafaela</b>.</p>
             </div>
 
         </section>
@@ -161,7 +161,7 @@
             <div class="contacto-contenedor">
                 <ul>
                     <li><h4>Celular</h4>
-                        <a href="https://wa.me/3424279277" target="_blank">Whastapp</a></li>
+                        <a href="https://wa.me/3425175606" target="_blank">Whastapp</a></li>
                     <li><h4>Gmail</h4>
                         <a href="mailto:bian.cornaglia11@gmail.com">bian.cornaglia11@gmail.com</a></li>
                     <li><h4>Github</h4>
